refactor: more small changes and refactorings
