# adapter/rest/file.go
@@ -126,38 +126,6 @@ func (a *Adapter) GetFileById(w http.ResponseWriter, r *http.Request, id openapi
 	renderJSON(w, mapFile(aFile))
 }
 
-// List file documents
-// (GET /files/{id}/documents)
-func (a *Adapter) ListFileDocuments(w http.ResponseWriter, r *http.Request, id openapi_types.UUID, params api.ListFileDocumentsParams) {
-	var (
-		ctx, cancel = context.WithTimeout(r.Context(), defaultTimeout)
-		principal   = a.principalFromRequest(r)
-	)
-	defer cancel()
-
-	fileID, err := uuid.FromString(id.String())
-	if err != nil {
-		a.logger.Sugar().With("error", err).Error("invalid file ID")
-		renderJSONError(w, http.StatusInternalServerError, fmt.Errorf("invalid file ID: %w", err))
-		return
-	}
-
-	documents, err := a.ragServer.ListFileDocuments(ctx, principal, ragserver.FileID{UUID: fileID}, ragserver.DocumentFilter{
-		SimilarTo: api.FromString(params.SimilarTo),
-	})
-	if err != nil {
-		if errors.Is(err, ragserver.ErrNotFound) {
-			renderJSONError(w, http.StatusNotFound, fmt.Errorf("file documents not found"))
-			return
-		}
-		a.logger.Sugar().With("error", err).Error("error listing file documents")
-		renderJSONError(w, http.StatusInternalServerError, fmt.Errorf("error listing file documents: %w", err))
-		return
-	}
-
-	renderJSON(w, mapDocuments(documents))
-}
-
 // Delete a file by ID
 // (DELETE /files/{id})
 func (a *Adapter) DeleteFileById(w http.ResponseWriter, r *http.Request, id openapi_types.UUID) {
@@ -188,10 +156,14 @@ func (a *Adapter) DeleteFileById(w http.ResponseWriter, r *http.Request, id open
 }
 
 func mapDocument(document ragserver.Document) api.Document {
-	return api.Document{
+	aDocument := api.Document{
 		Content: document.Content,
 		Page:    int32(document.Page),
 	}
+	if document.Distance != nil {
+		aDocument.Distance = document.Distance
+	}
+	return aDocument
 }
 
 func mapDocuments(documents []ragserver.Document) api.Documents {
